--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -21,10 +21,18 @@
 
 
     <h2>Empleado</h2>
-    <p th:text="'Nombre: ' + *{nombre}"></p>
-    <p th:text="'Apellidos: ' + *{apellidos}"></p>
+    <p th:text="'Nombre: ' + *{nombreDTO}"></p>
+    <p th:text="'Apellidos: ' + *{apellidosDTO}"></p>
     <p th:text="'Género: ' + *{genero}"></p>
     <p th:text="'Fecha de nacimiento: ' + *{fechaNacimiento}"></p>
+    <p th:text="'Edad: ' + *{edad}"></p>
+    <p th:text="'Pais de Nacimiento: ' + *{paisNacimiento}"></p>
+    <p th:text="'Comentarios: ' + *{comentarios}"></p>
+
+    <h2>Documentos Personales</h2>
+    <p th:text="'Tipo de documento: ' + *{tipoDocumento}"></p>
+    <p th:text="'Número de documento: ' + *{numeroDocumento}"></p>
+    <p th:text="'Teléfono Móvil: ' + *{prefijoTelefono} + ' ' + *{telefonoMovil}"></p>
 
     <h2>Dirección</h2>
     <p th:text="'Tipo de vía: ' + *{direccionDTO.tipoViaDireccionPpalDTO}"></p>
@@ -35,13 +43,27 @@
     <p th:text="'Localidad: ' + *{direccionDTO.localidadDireccionPpalDTO}"></p>
     <p th:text="'Código postal: ' + *{direccionDTO.codigoPostalDireccionPpalDTO}"></p>
     <p th:text="'Región: ' + *{direccionDTO.regionDireccionPpalDTO}"></p>
-    <p th:text="'País: ' + *{direccionDTO.paisDireccionPpalDTO}"></p>
+
+    <h2>Departamentos Y Especialidades</h2>
+    <p th:text="'Departamento: ' + *{departamentoDTO}"></p>
+    <p th:text="'Especialidades: ' + *{especialidadesSeleccionadasDTO}"></p>
 
     <h2>Datos Financieros</h2>
+    <p th:text="'Banco: ' + *{datosEconomicosDTO.cuentaCorrienteDTO.entidadBancaria}"></p>
+    <p th:text="'Cuenta Corriente: ' + *{datosEconomicosDTO.cuentaCorrienteDTO.cuentaCorrienteDTO}"></p>
+    <p th:text="'Salario: ' + *{datosEconomicosDTO.salarioDTO}"></p>
+    <p th:text="'Comisión: ' + *{datosEconomicosDTO.comisionDTO}"></p>
 
-    <p>Banco: <span th:text="${datos.cuentaCorriente.banco}"></span></p>
-    <p>Cuenta Corriente: <span th:text="${datos.cuentaCorriente.cuentaCorriente}"></span></p>
-    <p>Archivo: <span th:text="${datos.archivoNombreOriginal}"></span></p>
+    <h2>Tarjeta de Crédito</h2>
+    <p th:text="'Tipo de Tarjeta: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.tipoTarjetaCreditoDTO}"></p>
+    <p th:text="'Número de Tarjeta: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.numeroTarjetaCreditoDTO}"></p>
+    <p th:text="'Caducidad de la Tarjeta: Mes:' + *{datosEconomicosDTO.tarjetaCreditoDTO.mesCaducidadTarjetaCreditoDTO}
+    + ' Año:' + *{datosEconomicosDTO.tarjetaCreditoDTO.anioCaducidadTarjetaCreditoDTO}"></p>
+    <p th:text="'CVC: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.CVCDTO}"></p>
+
+    <input type="checkbox"
+            th:text="#{Validacion.Consentimiento.true}"
+            th:field="*{aceptaInformacionDTO}">
 
     <br>
 
