--- a/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
@@ -16,75 +16,100 @@
 <th:block th:text="${error}"/>
 
 <form th:action="@{/empleados/registro-direccion}" th:object="${empleadoRegistroDTO}" method="post" id="formulario">
+    <!-- Mostrar errores globales y validadciones que afectan a dos campos-->
+    <div th:if="${#fields.hasGlobalErrors()}">
+        <p class="error" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></p>
+    </div>
 
-    <label for="tipoVia">Tipo de vía:</label>
-    <input type="text" id="tipoVia" th:field="*{direccionDTO.tipoViaDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.tipoViaDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.tipoViaDireccionPpalDTO}" class="error"></div>
+    <h2>Documentos de Identificacion y Contacto</h2>
+
+    <div th:each="tipo : ${tiposDocumento}">
+        <input type="radio"
+               th:field="*{tipoDocumento}"
+               th:value="${tipo.codTipoDocumento}"
+               th:id="${'genero-input-' + tipo.codTipoDocumento}"/>
+        <label th:for="${'genero-input-' + tipo.codTipoDocumento}"
+               th:text="${tipo.tipoDocumento}"></label><br>
+    </div>
     <br><br>
 
-    <label for="via">Vía:</label>
-    <input type="text" id="via" th:field="*{direccionDTO.nombreViaDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.nombreViaDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.nombreViaDireccionPpalDTO}" class="error"></div>
+    <label for="documento" th:text="#{Datos-documento.documento}"/>
+    <input type="text" id="documento" th:field="*{numeroDocumento}" />
+    <div th:if="${#fields.hasErrors('numeroDocumento')}" th:errors="*{numeroDocumento}" class="error"></div>
     <br><br>
-
-    <label for="numero">Número:</label>
-    <input type="number" id="numero" th:field="*{direccionDTO.numeroViaDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.numeroViaDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.numeroViaDireccionPpalDTO}" class="error"></div>
-    <br><br>
-
-    <label for="piso">Piso:</label>
-    <input type="number" id="piso" th:field="*{direccionDTO.plantaDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.plantaDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.plantaDireccionPpalDTO}" class="error"></div>
-    <br><br>
-
-    <label for="puerta">Puerta:</label>
-    <input type="text" id="puerta" th:field="*{direccionDTO.puertaDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.puertaDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.puertaDireccionPpalDTO}" class="error"></div>
-    <br><br>
-
-    <label for="localidad">Localidad:</label>
-    <input type="text" id="localidad" th:field="*{direccionDTO.localidadDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.localidadDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.localidadDireccionPpalDTO}" class="error"></div>
-    <br><br>
-
-    <label for="codigoPostal">Código Postal:</label>
-    <input type="text" id="codigoPostal" th:field="*{direccionDTO.codigoPostalDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.codigoPostalDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.codigoPostalDireccionPpalDTO}" class="error"></div>
-    <br><br>
-
-    <label for="region">Región:</label>
-    <input type="text" id="region" th:field="*{direccionDTO.regionDireccionPpalDTO}"/>
-    <div th:if="${#fields.hasErrors('direccionDTO.regionDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.regionDireccionPpalDTO}" class="error"></div>
-    <br><br>
-
-    <label for="pais">País:</label>
-    <input type="text" id="pais" th:field="*{direccionDTO.paisDireccionPpalDTO}"/>
-    <!-- <div th:if="${#fields.hasErrors('direccionDTO.paisDireccionPpalDTO')}" th:errors="*{direccionDTO.paisDireccionPpalDTO}" class="error"></div>
-    -->
 
     <div>
-        <select>
-
-            <!-- <label th:for="${'pais_' + pais.codigoPais}" th:text="${pais.nombrePais}"><br>
-            -->
-            <!--  Muestra el nombre del género  </label> -->
-            <option
-                    th:each="pais : ${listaPaises}"
-                    th:field="*{direccionDTO.paisDireccionPpalDTO}"
-                    th:value="${pais.codigoPais}"
-                    th:id="${'genero_' + pais.codigoPais}"></option>
+        <select th:field="*{prefijoTelefono}" id="prefijo">
+            <option th:each="p : ${paises}"
+                    th:value="${p.prefijoPais}"
+                    th:text="${p.prefijoPais}">
+            </option>
         </select>
+        <div th:if="${#fields.hasErrors('prefijoTelefono')}" th:errors="*{prefijoTelefono}" class="error"></div>
     </div>
-    <div th:if="${#fields.hasErrors('direccionDTO.paisDireccionPpalDTO')}"
-         th:errors="*{direccionDTO.paisDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="TelfMovil" th:text="#{Datos-documento.telf}"/>
+    <input type="text" id="TelfMovil" th:field="*{telefonoMovil}" />
+    <div th:if="${#fields.hasErrors('telefonoMovil')}" th:errors="*{telefonoMovil}" class="error"></div>
+    <br><br>
+
+    <h2>Formulario de Dirección del Empleado</h2>
+
+    <div>
+        <select th:field="*{direccionDTO.tipoViaDireccionPpalDTO}" id="tipoVia">
+            <option th:each="v : ${tiposVia}"
+                    th:value="${v.codigoTipoVia}"
+                    th:text="${v.tipoVia}">
+            </option>
+        </select>
+        <div th:if="${#fields.hasErrors('direccionDTO.tipoViaDireccionPpalDTO')}" th:errors="*{direccionDTO.tipoViaDireccionPpalDTO}" class="error"></div>
+    </div>
+    <br><br>
+
+    <label for="via" th:text="#{Datos-direccion.nombreViaDirreccion}"/>
+    <input type="text" id="via" th:field="*{direccionDTO.nombreViaDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.nombreViaDireccionPpalDTO')}" th:errors="*{direccionDTO.nombreViaDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="numero" th:text="#{Datos-direccion.numeroViaDirreccion}"/>
+    <input type="text" id="numero" th:field="*{direccionDTO.numeroViaDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.numeroViaDireccionPpalDTO')}" th:errors="*{direccionDTO.numeroViaDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="portal" th:text="#{Datos-direccion.portalViaDirreccion}"/>
+    <input type="text" id="portal" th:field="*{direccionDTO.portalDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.portalDireccionPpalDTO')}" th:errors="*{direccionDTO.portalDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="planta" th:text="#{Datos-direccion.plantaViaDirreccion}"/>
+    <input type="text" id="planta" th:field="*{direccionDTO.plantaDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.plantaDireccionPpalDTO')}" th:errors="*{direccionDTO.plantaDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="puerta" th:text="#{Datos-direccion.puertaViaDirreccion}"/>
+    <input type="text" id="puerta" th:field="*{direccionDTO.puertaDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.puertaDireccionPpalDTO')}" th:errors="*{direccionDTO.puertaDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="localidad" th:text="#{Datos-direccion.localidadViaDirreccion}"/>
+    <input type="text" id="localidad" th:field="*{direccionDTO.localidadDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.localidadDireccionPpalDTO')}" th:errors="*{direccionDTO.localidadDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="region" th:text="#{Datos-direccion.regionDirreccion}"/>
+    <input type="text" id="region" th:field="*{direccionDTO.regionDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.regionDireccionPpalDTO')}" th:errors="*{direccionDTO.regionDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <label for="codigoPostal"  th:text="#{Datos-direccion.codigoPostalDirreccion}"/>
+    <input type="text" id="codigoPostal" th:field="*{direccionDTO.codigoPostalDireccionPpalDTO}" />
+    <div th:if="${#fields.hasErrors('direccionDTO.codigoPostalDireccionPpalDTO')}" th:errors="*{direccionDTO.codigoPostalDireccionPpalDTO}" class="error"></div>
+    <br><br>
+
+    <input type="button"
+           th:value="#{Boton.resetear}"
+           onclick="resetFormulario()">
     <br><br>
 
     <input type="button"
@@ -92,11 +117,9 @@
            onclick="vaciarFormulario()">
     <br><br>
 
-    <!--    <button type="submit">Siguiente</button>-->
     <input type="submit"
            th:value="#{Boton.siguiente}">
 </form>
-
 
 <script th:src="@{/js/script.js}"></script>
 
