UPDATE: Estructura de Clseses DTO y Entidades
+ Issue #26 Terminando de perfilar la estructura de Clases de DTO para
  poder iniciar la persistencia en BD. Falta crear el mapeo DTO ->
  Entidad.
+ Redifinida estructura de Entidad Empleado para los datos recopilados
  en el paso 4 del registro (RegistroFinanciero) de empleado por pasos y tienen que ser
  alojados en una tabla secundaria.

--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -61,9 +61,12 @@
     + ' Año:' + *{datosEconomicosDTO.tarjetaCreditoDTO.anioCaducidadTarjetaCreditoDTO}"></p>
     <p th:text="'CVC: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.CVCDTO}"></p>
 
+    <label for="aceptaInformacionDTO" th:text="#{Validacion.Consentimiento.true}"></label>
     <input type="checkbox"
-            th:text="#{Validacion.Consentimiento.true}"
-            th:field="*{aceptaInformacionDTO}">
+            th:field="*{aceptaInformacionDTO}"
+            id="aceptaInformacionDTO">
+    <div th:if="${#fields.hasErrors('aceptaInformacionDTO')}"
+         th:errors="*{aceptaInformacionDTO}" class="error"></div>
 
     <br>
 
