UPDATE:Registro de Empleados y ModelMapper
+ Capa de DTO para el registro del Empleado creada
+ Por Problemas de construcción de GRadle, se ha añadido "include:comun"
  en empleados y adaministración.

--- a/empleados/src/main/resources/templates/datosDepartamento.html
+++ b/empleados/src/main/resources/templates/datosDepartamento.html
@@ -22,7 +22,7 @@
 
         <div>
             <label for="departamento" th:text="#{Datos-departamento.nombreDept}"></label>
-            <select th:field="*{departamentoDTO}" id="departamento">
+            <select th:field="*{departamentoDTO.codigo}" id="departamento">
                 <option th:each="d : ${departamentos}"
                         th:value="${d.codigo}"
                         th:text="${d.nombreDept}">
@@ -32,16 +32,28 @@
         </div>
         <br><br>
 
-        <th:block th:text="#{Datos-departamento.especialidades}"/>
-        <div th:each="e : ${especialidades}" >
-            <input
-                    type="checkbox"
-                    th:field="*{especialidadesSeleccionadasDTO}"
-                    th:value="${e.especialidad}"
-                    id="especialiades"/>
-            <label for="especialiades" th:text="${e.especialidad}">Afición</label>
+        <!-- Sección de Especialidades -->
+        <h3 th:text="#{Datos-departamento.especialidades}">Especialidades</h3>
+
+        <div th:each="e, iterStat : *{especialidadesSeleccionadasDTO}">
+
+<!--            &lt;!&ndash; Campo oculto para ID &ndash;&gt;-->
+<!--            <input type="hidden"-->
+<!--                   th:field="*{especialidadesSeleccionadasDTO[__${iterStat.index}__].id}">-->
+
+<!--            &lt;!&ndash; Campo oculto para nombre de especialidad &ndash;&gt;-->
+<!--            <input type="hidden"-->
+<!--                   th:field="*{especialidadesSeleccionadasDTO[__${iterStat.index}__].especialidad}">-->
+
+            <!-- Checkbox -->
+            <input type="checkbox"
+                   th:field="*{especialidadesSeleccionadasDTO[__${iterStat.index}__].seleccionada}"
+                   th:value="${e.seleccionada}"
+                   th:id="'esp-' + ${e.id}">
+
+            <label th:for="'esp-' + ${e.id}"
+                   th:text="${e.especialidad}">Nombre especialidad</label>
         </div>
-        <div th:each="err : ${#fields.errors('especialidadesSeleccionadasDTO')}" th:text="${err}" class="error"/>
 
         <input type="button" th:value="#{Boton.selecciona.especialidad}" onclick="seleccionaTodosCheckboxes()">
         <input type="button" th:value="#{Boton.deselecciona.especialidad}" onclick="deseleccionaTodosCheckboxes()">
