--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -23,15 +23,15 @@
     <h2>Empleado</h2>
     <p th:text="'Nombre: ' + *{nombreDTO}"></p>
     <p th:text="'Apellidos: ' + *{apellidosDTO}"></p>
-    <p th:text="'Género: ' + *{genero}"></p>
-    <p th:text="'Fecha de nacimiento: ' + *{fechaNacimiento}"></p>
-    <p th:text="'Edad: ' + *{edad}"></p>
+    <p th:text="'Género: ' + *{generoSeleccionadoDTO}"></p>
+    <p th:text="'Fecha de nacimiento: ' + *{fechaNacimientoDTO}"></p>
+    <p th:text="'Edad: ' + *{edadDTO}"></p>
     <p th:text="'Pais de Nacimiento: ' + *{paisNacimiento}"></p>
     <p th:text="'Comentarios: ' + *{comentarios}"></p>
 
     <h2>Documentos Personales</h2>
-    <p th:text="'Tipo de documento: ' + *{tipoDocumento}"></p>
-    <p th:text="'Número de documento: ' + *{numeroDocumento}"></p>
+    <p th:text="'Tipo de documento: ' + *{tipoDocumentoDTO}"></p>
+    <p th:text="'Número de documento: ' + *{numeroDocumentoDTO}"></p>
     <p th:text="'Teléfono Móvil: ' + *{prefijoTelefono} + ' ' + *{telefonoMovil}"></p>
 
     <h2>Dirección</h2>
@@ -49,17 +49,17 @@
     <p th:text="'Especialidades: ' + *{especialidadesSeleccionadasDTO}"></p>
 
     <h2>Datos Financieros</h2>
-    <p th:text="'Banco: ' + *{datosEconomicosDTO.cuentaCorrienteDTO.entidadBancaria}"></p>
-    <p th:text="'Cuenta Corriente: ' + *{datosEconomicosDTO.cuentaCorrienteDTO.cuentaCorrienteDTO}"></p>
-    <p th:text="'Salario: ' + *{datosEconomicosDTO.salarioDTO}"></p>
-    <p th:text="'Comisión: ' + *{datosEconomicosDTO.comisionDTO}"></p>
+    <p th:text="'Banco: ' + *{cuentaCorrienteDTO.entidadBancaria}"></p>
+    <p th:text="'Cuenta Corriente: ' + *{cuentaCorrienteDTO.numeroCuentaDTO}"></p>
+    <p th:text="'Salario: ' + *{salarioDTO}"></p>
+    <p th:text="'Comisión: ' + *{comisionDTO}"></p>
 
     <h2>Tarjeta de Crédito</h2>
-    <p th:text="'Tipo de Tarjeta: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.tipoTarjetaCreditoDTO}"></p>
-    <p th:text="'Número de Tarjeta: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.numeroTarjetaCreditoDTO}"></p>
-    <p th:text="'Caducidad de la Tarjeta: Mes:' + *{datosEconomicosDTO.tarjetaCreditoDTO.mesCaducidadTarjetaCreditoDTO}
-    + ' Año:' + *{datosEconomicosDTO.tarjetaCreditoDTO.anioCaducidadTarjetaCreditoDTO}"></p>
-    <p th:text="'CVC: ' + *{datosEconomicosDTO.tarjetaCreditoDTO.CVCDTO}"></p>
+    <p th:text="'Tipo de Tarjeta: ' + *{tarjetasCreditoDTO.tipoTarjetaCreditoDTO}"></p>
+    <p th:text="'Número de Tarjeta: ' + *{tarjetasCreditoDTO.numeroTarjetaCreditoDTO}"></p>
+    <p th:text="'Caducidad de la Tarjeta: Mes:' + *{tarjetasCreditoDTO.mesCaducidadTarjetaCreditoDTO}
+    + ' Año:' + *{tarjetasCreditoDTO.anioCaducidadTarjetaCreditoDTO}"></p>
+    <p th:text="'CVC: ' + *{tarjetasCreditoDTO.CVCDTO}"></p>
 
     <label for="aceptaInformacionDTO" th:text="#{Validacion.Consentimiento.true}"></label>
     <input type="checkbox"
