--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -23,19 +23,20 @@
     <h2>Empleado</h2>
     <p th:text="'Nombre: ' + *{nombreDTO}"></p>
     <p th:text="'Apellidos: ' + *{apellidosDTO}"></p>
-    <p th:text="'Género: ' + *{generoSeleccionadoDTO}"></p>
+    <p th:text="'Género: ' + *{generoSeleccionadoDTO.codigoGenero}"></p>
+    <p th:text="'Fotografia: ' + *{fotografiaDTO}"></p>
     <p th:text="'Fecha de nacimiento: ' + *{fechaNacimientoDTO}"></p>
     <p th:text="'Edad: ' + *{edadDTO}"></p>
-    <p th:text="'Pais de Nacimiento: ' + *{paisNacimiento}"></p>
+    <p th:text="'Pais de Nacimiento: ' + *{paisNacimiento.codigoPaisDTO}"></p>
     <p th:text="'Comentarios: ' + *{comentarios}"></p>
 
     <h2>Documentos Personales</h2>
-    <p th:text="'Tipo de documento: ' + *{tipoDocumentoDTO}"></p>
+    <p th:text="'Tipo de documento: ' + *{tipoDocumentoDTO.tipoDocumento}"></p>
     <p th:text="'Número de documento: ' + *{numeroDocumentoDTO}"></p>
     <p th:text="'Teléfono Móvil: ' + *{prefijoTelefono} + ' ' + *{telefonoMovil}"></p>
 
     <h2>Dirección</h2>
-    <p th:text="'Tipo de vía: ' + *{direccionDTO.tipoViaDireccionPpalDTO}"></p>
+    <p th:text="'Tipo de vía: ' + *{direccionDTO.tipoViaDireccionPpalDTO.tipoVia}"></p>
     <p th:text="'Nombre de vía: ' + *{direccionDTO.nombreViaDireccionPpalDTO}"></p>
     <p th:text="'Número de vía: ' + *{direccionDTO.numeroViaDireccionPpalDTO}"></p>
     <p th:text="'Planta: ' + *{direccionDTO.plantaDireccionPpalDTO}"></p>
@@ -45,17 +46,17 @@
     <p th:text="'Región: ' + *{direccionDTO.regionDireccionPpalDTO}"></p>
 
     <h2>Departamentos Y Especialidades</h2>
-    <p th:text="'Departamento: ' + *{departamentoDTO}"></p>
+    <p th:text="'Departamento: ' + *{departamentoDTO.nombreDept}"></p>
     <p th:text="'Especialidades: ' + *{especialidadesSeleccionadasDTO}"></p>
 
     <h2>Datos Financieros</h2>
-    <p th:text="'Banco: ' + *{cuentaCorrienteDTO.entidadBancaria}"></p>
+    <p th:text="'Banco: ' + *{cuentaCorrienteDTO.entidadBancaria.nombreEntidadDTO}"></p>
     <p th:text="'Cuenta Corriente: ' + *{cuentaCorrienteDTO.numeroCuentaDTO}"></p>
     <p th:text="'Salario: ' + *{salarioDTO}"></p>
     <p th:text="'Comisión: ' + *{comisionDTO}"></p>
 
     <h2>Tarjeta de Crédito</h2>
-    <p th:text="'Tipo de Tarjeta: ' + *{tarjetasCreditoDTO.tipoTarjetaCreditoDTO}"></p>
+    <p th:text="'Tipo de Tarjeta: ' + *{tarjetasCreditoDTO.tipoTarjetaCreditoDTO.nombreTipoTarjetaDTO}"></p>
     <p th:text="'Número de Tarjeta: ' + *{tarjetasCreditoDTO.numeroTarjetaCreditoDTO}"></p>
     <p th:text="'Caducidad de la Tarjeta: Mes:' + *{tarjetasCreditoDTO.mesCaducidadTarjetaCreditoDTO}
     + ' Año:' + *{tarjetasCreditoDTO.anioCaducidadTarjetaCreditoDTO}"></p>
