--- a/empleados/src/main/resources/templates/empleadoDatosFinales.html
+++ b/empleados/src/main/resources/templates/empleadoDatosFinales.html
@@ -46,7 +46,7 @@
     <p th:text="'Región: ' + *{direccionDTO.regionDireccionPpalDTO}"></p>
 
     <h2>Departamentos Y Especialidades</h2>
-    <p th:text="'Departamento: ' + *{departamentoDTO.nombreDept}"></p>
+    <p th:text="'Departamento: ' + *{departamentoDTO.id}"></p>
     <p th:text="'Especialidades: ' + *{especialidadesSeleccionadasDTO}"></p>
 
     <h2>Datos Financieros</h2>
