--- a/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
+++ b/empleados/src/main/resources/templates/empleadoDireccionRegistro.html
@@ -25,9 +25,8 @@
 
     <div th:each="tipo : ${tiposDocumento}">
         <input type="radio"
-               th:field="*{tipoDocumentoDTO.tipoDocumento}"
-               th:value="${tipo.tipoDocumento}"
-               th:id="${'tipoDocumento-input-' + tipo.tipoDocumento}"/>
+               th:field="*{tipoDocumentoDTO.id}"
+               th:value="${tipo.id}"/>
         <label th:for="${'tipoDocumento-input-' + tipo.tipoDocumento}"
                th:text="${tipo.tipoDocumento}"></label><br>
         <div th:if="${#fields.hasErrors('tipoDocumentoDTO.tipoDocumento')}" th:errors="*{tipoDocumentoDTO.tipoDocumento}" class="error"></div>
@@ -58,9 +57,9 @@
     <h2>Formulario de Dirección del Empleado</h2>
 
     <div>
-        <select th:field="*{direccionDTO.tipoViaDireccionPpalDTO.tipoVia}" id="tipoVia">
+        <select th:field="*{direccionDTO.tipoViaDireccionPpalDTO.id}" id="tipoVia">
             <option th:each="via : ${tiposVia}"
-                    th:value="${via.tipoVia}"
+                    th:value="${via.id}"
                     th:text="${via.tipoVia}">
             </option>
         </select>
