--- a/empleados/src/main/resources/templates/registro.html
+++ b/empleados/src/main/resources/templates/registro.html
@@ -33,7 +33,7 @@
             font-weight: bold;
         }
 
-        input[type="text"], input[type="password"] {
+        input[type="text"], input[type="password"],input[type="email"] {
             width: 100%;
             padding: 10px;
             font-size: 14px;
